Update logo reference to correct case

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     {% endwith %}
     <div class="container">
         <h1 class="my-4">
-            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Worker Breakout Logo" style="width:50px; vertical-align:middle; margin-right:10px;">
+            <img src="{{ url_for('static', filename='images/logo.PNG') }}" alt="Worker Breakout Logo" style="width:50px; vertical-align:middle; margin-right:10px;">
             <strong>Worker Breakout</strong>
         </h1>
         <nav class="nav mb-4">
