Added feature to Set max worker, and randomize breakout

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -67,3 +67,41 @@ ul li {
 .list-group-item {
     padding: 1px 3px;
 }
+
+/* Alignment for form elements on the calculate breakout page */
+.form-group.row {
+    margin-bottom: 15px;
+}
+
+.col-form-label {
+    text-align: right;
+}
+
+.align-items-center {
+    align-items: center !important;
+}
+
+.mb-2 {
+    margin-bottom: 15px !important;
+}
+.form-group .row {
+    align-items: center;
+}
+
+.col-form-label {
+    text-align: left;
+}
+.form-group .row {
+    align-items: center;
+}
+
+.col-form-label {
+    text-align: left;
+}
+
+.max-display {
+    margin-left: 10px;
+    font-weight: bold;
+    color: #333;
+    vertical-align: middle;
+}
