--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,14 @@
 {% block title %}Worker Breakout{% endblock %}
 {% block content %}
 <div class="container">
+    <h2 class="my-4">Upload CSV File</h2>
+    <form action="{{ url_for('upload_csv') }}" method="post" enctype="multipart/form-data">
+        <div class="form-group">
+            <input type="file" class="form-control-file" name="file" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Upload</button>
+    </form>
+
     <h2 class="my-4">Calculate Breakout by Stocking Time (Hours)</h2>
     <form action="{{ url_for('calculate_distribution') }}" method="post">
         <div class="form-group">
@@ -9,7 +17,7 @@
                 <div class="row align-items-center mb-2">
                     <label for="time_{{ section }}" class="col-sm-2 col-form-label text-left">{{ section }}:</label>
                     <div class="col-sm-3">
-                        <input type="number" class="form-control" step="0.1" id="time_{{ section }}" name="time_{{ section }}" min="0" required>
+                        <input type="number" class="form-control" step="0.1" id="time_{{ section }}" name="time_{{ section }}" min="0" required value="{{ section_data.get(section, '') }}">
                     </div>
                     <div class="col-sm-5 d-flex align-items-center">
                         <button type="button" class="btn btn-primary" onclick="setMax('{{ section }}')">Set Max</button>
